# great-learning

./: .gitignore  README.md  pyproject.toml
src/: Notebook+-+Numpy.ipynb  README.md
src/week-1-python-for-data-science/: Notebook+%231+-+Pandas.ipynb  Notebook+%232+-+Pandas.ipynb  Notebook+-+CardioGood+Fitness+Data+Analysis.ipynb  Notebook+-+Data+Visualization.ipynb  Notebook+-+Hypothesis+Testing+Optional+Content.ipynb  Notebook+-+Numpy.ipynb  Notebook+-+Suicide+Rate+Analysis.ipynb  Practice_Exercise_Hypothesis_Testing_Solutions.ipynb  (+1 more)
week-1-python-for-data-science/: Notebook+%231+-+Pandas.ipynb  Notebook+%232+-+Pandas.ipynb  Notebook+-+CardioGood+Fitness+Data+Analysis.ipynb
week-2-stats-for-data-science/: Notebook+-+Hypothesis+Testing+Optional+Content.ipynb  Notebook+-+Hypothesis+Testing.ipynb  Notebook+-+Inferential+Statistics.ipynb
week-3-making-sense-of-unstructured-data/: Hands on quiz Product segmentation- learners Notebook-1.ipynb  MLS_Case_Study_Unsupervised_Learning.ipynb  MSUD_assessment.ipynb  PCA+and+K-Means+Decipher+Genome.ipynb  Practice+Case+Study.ipynb  Practice_Case_Study_Auto_MPG.ipynb  Practice_Case_Study_Clustering.ipynb
week-4-regression-and-prediction/: LVC_1_%26_2_Practical_Application_Effects_of_Advertising_on_Sales.ipynb
week-5-classification-and-hypothesis-testing/: CHT_Graded_Project_Learner_Notebook.html  CHT_Graded_Project_Learner_Notebook.ipynb  Case_Study_Employee_Attrition.ipynb  Practical_Application_Restaurant_Data.ipynb  SVM+Kernel+Trick+Visualization+Notebook+%281%29.ipynb
week-6-deep-learning/: Case_Study_Predicting_Chances_of_Admission.ipynb  Project1.ipynb
week-7-recommendations-systems/: MLS_Yelp_Reviews_Notebook.ipynb  Project_Movie_Recommendation_Learners_Notebook_final.html  Project_Movie_Recommendation_Learners_Notebook_final.ipynb
week4-regression-and-preditction/: quiz-week4.ipynb
(+18 files in other folders)
