[tool.poetry]
name = "great-learning"
version = "0.1.0"
description = "Class work for Data Science class"
authors = ["Robert Barrimond <robert@barrimond.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "great_learning"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.3"
pandas = "^1.4.4"
requests = "^2.28.1"
ipykernel = "^6.15.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
