[tool.poetry]
name = "mit-idss-data-science"
version = "0.1.0"
description = "Class work for MIT IDSS Data Science class"
authors = ["Robert Barrimond <robert@barrimond.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.12"
numpy = "^1.23.4"
pandas = "^1.5.1"
requests = "^2.28.1"
ipykernel = "^6.17.1"
openpyxl = "^3.0.10"
matplotlib = "^3.6.2"
seaborn = "^0.12.1"
scipy = "^1.9.3"
scikit-learn = "^1.1.3"
tqdm = "^4.64.1"
jinja2 = "^3.1.2"
scikit-learn-extra = "^0.2.0"
statsmodels = "^0.13.5"
autopep8 = "^2.0.0"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
